--- a/index.html
+++ b/index.html
@@ -3,129 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wholesale Deal Analysis Tool</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-color: #3498db;
-            --secondary-color: #2ecc71;
-            --background-color: #f5f6fa;
-            --text-color: #34495e;
-            --border-radius: 8px;
-        }
-
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: var(--background-color);
-            color: var(--text-color);
-            line-height: 1.6;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            display: grid;
-            gap: 20px;
-            grid-template-columns: 1fr;
-        }
-
-        h1 {
-            text-align: center;
-            color: var(--primary-color);
-            margin-bottom: 20px;
-        }
-
-        .input-group {
-            display: grid;
-            grid-template-columns: 1fr 2fr;
-            align-items: center;
-            gap: 10px;
-        }
-
-        label {
-            font-weight: bold;
-        }
-
-        input, select {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: var(--border-radius);
-            font-size: 16px;
-        }
-
-        button {
-            background-color: var(--primary-color);
-            color: white;
-            border: none;
-            padding: 12px 20px;
-            border-radius: var(--border-radius);
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-        }
-
-        button:hover {
-            background-color: #2980b9;
-        }
-
-        #results {
-            background-color: white;
-            padding: 20px;
-            border-radius: var(--border-radius);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        #results h2 {
-            color: var(--secondary-color);
-            margin-bottom: 15px;
-        }
-
-        .results-content {
-            display: flex;
-            gap: 20px;
-        }
-
-        .results-image {
-            flex: 0 0 auto;
-            max-width: 200px;
-        }
-
-        .results-image img {
-            max-width: 100%;
-            border-radius: var(--border-radius);
-        }
-
-        .results-info {
-            flex: 1;
-        }
-
-        .results-info p {
-            margin-bottom: 10px;
-        }
-
-        #loading {
-            text-align: center;
-            font-style: italic;
-            color: var(--primary-color);
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        .fade-in {
-            animation: fadeIn 0.5s ease-in;
-        }
-    </style>
+    <title>Deal Analysis</title>
 </head>
 <body>
     <div class="container">
@@ -166,68 +44,9 @@
         <div id="loading" style="display: none;">Analyzing... Please wait.</div>
     </div>
 
-    <script src="/node_modules/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script>
-    <script>
-        window.onload = function() {
-            async function performAnalysis() {
-                const itemName = document.getElementById('itemName').value;
-                const size = document.getElementById('size').value;
-                const condition = document.getElementById('condition').value;
-                const totalCost = parseFloat(document.getElementById('totalCost').value);
-                const quantity = parseInt(document.getElementById('quantity').value);
-
-                const resultsDiv = document.getElementById('results');
-                const loadingDiv = document.getElementById('loading');
-                
-                resultsDiv.innerHTML = '';
-                resultsDiv.style.display = 'none';
-                loadingDiv.style.display = 'block';
-
-                try {
-                    console.log('Searching eBay for:', { searchTerm: itemName, size, condition });
-                    const ebayData = await searchEbay({ searchTerm: itemName, size, condition });
-                    console.log('eBay data received:', ebayData);
-
-                    if (!ebayData || ebayData.averagePrice === 0 || ebayData.averageSaleSpeed === 0) {
-                        throw new Error('No valid eBay data received. Please try a different search term.');
-                    }
-
-                    const analysis = analyzeWholesaleDeal(ebayData, totalCost, quantity);
-                    console.log('Analysis result:', analysis);
-
-                    resultsDiv.innerHTML = `
-                        <h2>Results</h2>
-                        <div class="results-content">
-                            ${ebayData.firstImageUrl ? `
-                                <div class="results-image">
-                                    <img src="${ebayData.firstImageUrl}" alt="Product Image">
-                                </div>
-                            ` : ''}
-                            <div class="results-info">
-                                <p><strong>Average Sale Price:</strong> £${analysis.averagePrice}</p>
-                                <p><strong>Average Sales per Day:</strong> ${analysis.averageSaleSpeed}</p>
-                                <p><strong>Cost per Item:</strong> £${analysis.costPerItem}</p>
-                                <p><strong>Total Revenue:</strong> £${analysis.revenue}</p>
-                                <p><strong>Total Profit:</strong> £${analysis.profit}</p>
-                                <p><strong>Profit per Item:</strong> £${analysis.profitPerItem}</p>
-                                <p><strong>Estimated Sell-Through Time:</strong> ${analysis.sellThroughTime}</p>
-                                <p><strong>Competition (Active Listings):</strong> ${analysis.competitionNumber}</p>
-                            </div>
-                        </div>
-                    `;
-                    resultsDiv.style.display = 'block';
-                } catch (error) {
-                    console.error('Error during analysis:', error);
-                    resultsDiv.innerHTML = `<p style="color: red;">Error: ${error.message}</p>`;
-                    resultsDiv.style.display = 'block';
-                } finally {
-                    loadingDiv.style.display = 'none';
-                }
-            }
-
-            window.performAnalysis = performAnalysis;
-        };
+    <script type="module">
+        import { performAnalysis } from './main.js';
+        window.performAnalysis = performAnalysis;
     </script>
 </body>
 </html>
